--- a/sass/layouts/_headeretfooter.scss
+++ b/sass/layouts/_headeretfooter.scss
@@ -7,13 +7,13 @@
 }
 .logo img
 {
-    width: 50%;
+    width: 130px;
     height: 35px;
     margin-top: 20px;
 }
 footer
 {
-    height: 240px;
+    height: 250px;
     width: 100%;
     background-color: darken(grey, $amount: 30);
 }
@@ -38,6 +38,8 @@ footer
 }
 .menu_footer ul
 {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
     font-size: 15px;
 }
