--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -1,3 +1,4 @@
+
 /*.........1ere section............*/
 .suiteheader
 {
@@ -18,7 +19,7 @@
 		.icone
 		{
 			font-size: 20px;
-			margin-left: 10%;
+			margin-left: 8%;
 			margin-right: 5px;
 		}
 		.ville
@@ -88,7 +89,7 @@
 		{
 			border-radius: 25px;
 			height: 70px;
-			width: 85%;
+			width: 88%;
 			box-shadow: ($texte +110%) 0px 6px 15px;
 			border: none;
 			margin-left: 30px;
@@ -145,21 +146,21 @@
 {
 	display: flex;
 	width: 100%;
-	height: 1250px;
+	height: 1300px;
 	flex-direction: column;
 	justify-content: center;
 	background-color: $cadre;
 	margin-top: 30px;
-	padding-top: 30px;
-	padding-bottom: 50px;
+	padding-top: px;
 }	
+
 	.carte
 	{
 		display: flex;
 		flex-direction: column;
 		width: 90%;
 		height: 250px;
-		margin-bottom: 20px;
+		margin-top: 30px;
 		border-radius: 20px;
 		box-shadow: ($texte +110%) 0px 6px 20px;
 		margin-left: 20px;
@@ -220,4 +221,116 @@
 				padding-right: 10px;
 				color: $texte;
 			}
-			
+@media screen and (max-width: 2048px) and (min-width: 768px)
+{
+	.logo img
+	{
+		border: yellow solid;
+		width: 35%;
+		height: 25%;
+	}
+	.icone
+	{
+		margin-left: 0%;
+		font-size: 30px;
+	}
+	.ville
+	{
+			width: 100%;
+			height: 50px;
+			font-size: 20px;
+	}
+	h1
+	{
+		font-size: 28px;
+	}
+	h1+p
+	{
+		font-size: 20px;
+		margin-top: 30px;
+	}
+	.explorer a button
+	{
+		width: 40%;
+		font-size: 20px;
+		margin-top: 50px;
+	}
+	.fonctionnement
+	{
+		width: 80%;
+		justify-content: space-around;
+		align-items: center;
+		margin-left: 100px;
+	}
+	h2
+	{
+		font-size: 28px;
+		text-align: center;
+		width: 100%;
+		margin: 0;
+		border: springgreen solid;
+	}
+	
+	.choix h4,i
+	{
+		font-size: 18px;
+		padding-left: 20px;
+	}
+	.num
+	{
+		margin-left: 0;
+		font-size: 20px;
+		border-radius: 20px 0 0 20px;
+		height: 100%;
+		width: 8%;
+	}
+	.carte
+	{
+		width: 80%;
+		margin-left: 100px;
+	}
+	aside
+	{
+		margin-left: 55%;
+	}
+	footer
+	{
+		height: 200px;
+	}
+	.menu_footer
+	{
+		margin: 0;
+		width: 100%;
+	}
+	.menu_footer ul
+	{
+		text-align: center;
+		justify-content: space-around;
+		font-size: 16px;
+		width: 100%;
+		flex-direction: row;
+	
+	}
+	.menu_footer i
+	{
+		width: 30px;
+		font-size: 18px;
+		margin-right: 20px;
+	}
+.logofooter p
+{
+		font-size: 30px;
+		text-align: center;
+		width: 100%;
+		margin: 0;
+		padding: 30px;
+}
+}
+@media screen and (max-width: 2048px) and (min-width: 992px)
+{
+	.logo img
+	{
+		width: 20%;
+	}
+	
+}
