--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -37,13 +37,13 @@
 }
 
 .logo img {
-  width: 50%;
+  width: 130px;
   height: 35px;
   margin-top: 20px;
 }
 
 footer {
-  height: 240px;
+  height: 250px;
   width: 100%;
   background-color: #343434;
 }
@@ -74,6 +74,13 @@ footer {
 }
 
 .menu_footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   list-style-type: none;
   font-size: 15px;
 }
