--- a/sass/style.css
+++ b/sass/style.css
@@ -37,13 +37,13 @@
 }
 
 .logo img {
-  width: 50%;
+  width: 130px;
   height: 35px;
   margin-top: 20px;
 }
 
 footer {
-  height: 240px;
+  height: 250px;
   width: 100%;
   background-color: #343434;
 }
@@ -74,6 +74,13 @@ footer {
 }
 
 .menu_footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   list-style-type: none;
   font-size: 15px;
 }
@@ -281,7 +288,7 @@ h4 {
 
 .icone {
   font-size: 20px;
-  margin-left: 10%;
+  margin-left: 8%;
   margin-right: 5px;
 }
 
@@ -361,7 +368,7 @@ h1 + p {
 .fonctionnement button {
   border-radius: 25px;
   height: 70px;
-  width: 85%;
+  width: 88%;
   -webkit-box-shadow: #e0dfdf 0px 6px 15px;
           box-shadow: #e0dfdf 0px 6px 15px;
   border: none;
@@ -433,7 +440,7 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 1250px;
+  height: 1300px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -443,8 +450,7 @@ h2 {
           justify-content: center;
   background-color: rgba(245, 244, 244, 0.986);
   margin-top: 30px;
-  padding-top: 30px;
-  padding-bottom: 50px;
+  padding-top: px;
 }
 
 .carte {
@@ -457,7 +463,7 @@ h2 {
           flex-direction: column;
   width: 90%;
   height: 250px;
-  margin-bottom: 20px;
+  margin-top: 30px;
   border-radius: 20px;
   -webkit-box-shadow: #e0dfdf 0px 6px 20px;
           box-shadow: #e0dfdf 0px 6px 20px;
@@ -538,5 +544,104 @@ aside {
   padding-left: 80%;
   padding-right: 10px;
   color: #727171;
+}
+
+@media screen and (max-width: 2048px) and (min-width: 768px) {
+  .logo img {
+    border: yellow solid;
+    width: 35%;
+    height: 25%;
+  }
+  .icone {
+    margin-left: 0%;
+    font-size: 30px;
+  }
+  .ville {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+  }
+  h1 {
+    font-size: 28px;
+  }
+  h1 + p {
+    font-size: 20px;
+    margin-top: 30px;
+  }
+  .explorer a button {
+    width: 40%;
+    font-size: 20px;
+    margin-top: 50px;
+  }
+  .fonctionnement {
+    width: 80%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 100px;
+  }
+  h2 {
+    font-size: 28px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    border: springgreen solid;
+  }
+  .choix h4, i {
+    font-size: 18px;
+    padding-left: 20px;
+  }
+  .num {
+    margin-left: 0;
+    font-size: 20px;
+    border-radius: 20px 0 0 20px;
+    height: 100%;
+    width: 8%;
+  }
+  .carte {
+    width: 80%;
+    margin-left: 100px;
+  }
+  aside {
+    margin-left: 55%;
+  }
+  footer {
+    height: 200px;
+  }
+  .menu_footer {
+    margin: 0;
+    width: 100%;
+  }
+  .menu_footer ul {
+    text-align: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    font-size: 16px;
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .menu_footer i {
+    width: 30px;
+    font-size: 18px;
+    margin-right: 20px;
+  }
+  .logofooter p {
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 30px;
+  }
+}
+
+@media screen and (max-width: 2048px) and (min-width: 992px) {
+  .logo img {
+    width: 20%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
