--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@
 
 .logo img {
   width: 130px;
-  height: 35px;
+  height: auto;
   margin-top: 20px;
 }
 
@@ -98,8 +98,8 @@ footer {
 
 @media screen and (min-width: 768px) {
   .logo img {
-    width: 200px;
-    height: 50px;
+    width: 20%;
+    height: auto;
   }
   footer {
     height: 200px;
@@ -135,7 +135,9 @@ footer {
 
 @media screen and (min-width: 1294px) {
   .logo img {
-    width: 20%;
+    width: 15%;
+    height: auto;
+    margin-right: 100px;
   }
 }
 
@@ -224,6 +226,23 @@ main {
 h4 {
   font-size: 16px;
   font-weight: 800;
+  width: 100%;
+  margin-top: 10px;
+  color: black;
+}
+
+.blocmenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 220px;
 }
 
 .menu {
@@ -232,18 +251,18 @@ h4 {
   display: flex;
   background-color: white;
   border-radius: 20px;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 90%;
   height: 60px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-left: 15px;
+  padding-left: 10px;
   margin-left: 20px;
-  padding-right: 20px;
-  margin-bottom: 0px;
   -webkit-box-shadow: #b8b7b7 0px 5px 10px;
           box-shadow: #b8b7b7 0px 5px 10px;
 }
@@ -259,8 +278,9 @@ h4 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: -10px;
   font-size: 14px;
+  width: 100%;
+  height: 35px;
 }
 
 .description_menu {
@@ -269,6 +289,47 @@ h4 {
 
 .tarif {
   font-weight: 800;
+  color: black;
+  margin-right: 10px;
+}
+
+.valide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 0px;
+}
+
+.valide i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: transparent;
+  border: red solid;
+}
+
+.valide:hover i {
+  color: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #99E2D0;
+  font-size: 20px;
+  padding: 10px;
+  width: 42px;
+  height: 60px;
+  margin-bottom: -100px;
+  margin-right: 40px;
+  border-radius: 0 20px 20px 0;
+  border: #99E2D0;
+}
+
+.menu:hover {
+  -webkit-box-shadow: green 6px 6px 6px;
+          box-shadow: green 6px 6px 6px;
 }
 
 .bouton {
@@ -327,41 +388,69 @@ h4 {
 
 @media screen and (min-width: 1294px) {
   .photo_menu img {
-    height: 700px;
+    height: 400px;
+    width: 100%;
+  }
+  .fleche {
+    margin-left: 90px;
   }
   main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 900px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-top: -80px;
+    margin-top: -10px;
+    border-radius: 0%;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
   .titre {
-    width: 60%;
-    margin-right: 100px;
+    width: 100%;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    margin-top: 30px;
   }
   .titre h1 {
-    font-size: 30px;
+    font-size: 35px;
+    margin-bottom: 20px;
+    margin-left: 70px;
   }
   .titre i {
-    font-size: 30px;
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+  .menu {
+    height: auto;
+    width: 30%;
   }
   .detailmenu h2 {
     font-size: 25px;
-    text-align: center;
-    margin-left: 50px;
+    margin-left: -80%;
+    margin-top: 20px;
   }
   .detailmenu {
-    width: 70%;
-    height: 1500px;
+    width: 90%;
+    height: 550px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .blocmenu {
+    width: 90%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 20px;
   }
   .descriptiontarif {
     height: 70px;
@@ -369,10 +458,7 @@ h4 {
   h4 {
     font-size: 20px;
     margin-left: 20px;
-    margin-top: 10px;
-  }
-  .menu {
-    height: 70px;
+    margin-top: 15px;
   }
   .description_menu {
     font-size: 18px;
@@ -385,6 +471,7 @@ h4 {
   }
   .bouton button {
     width: 400px;
+    margin-top: 30px;
   }
   .bouton a button {
     font-size: 22px;
@@ -588,15 +675,16 @@ h2 {
   border-radius: 50%;
   background-color: #9356DC;
   color: white;
-  width: 30px;
+  width: 35px;
   height: 30px;
   margin-left: -13px;
 }
 
 .choix i {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 30px;
+  margin-right: -30px;
   color: #a4a3a3;
+  font-size: 20px;
 }
 
 .choix:hover i {
@@ -714,6 +802,7 @@ aside {
   color: #727171;
 }
 
+/*.....................TABLETTE................*/
 @media screen and (min-width: 768px) {
   .rechercher {
     padding: 0;
@@ -730,16 +819,18 @@ aside {
     margin-left: -30px;
   }
   h1 {
-    font-size: 35px;
+    font-size: 30px;
   }
   h1 + p {
     font-size: 20px;
     margin-top: 30px;
   }
+  .explorer {
+    height: 270px;
+  }
   .explorer a button {
     width: 300px;
     font-size: 20px;
-    margin-top: 50px;
   }
   .fonctionnement {
     width: 100%;
@@ -759,9 +850,9 @@ aside {
   .choix button {
     width: 70%;
   }
-  .choix h4, i {
+  .choix h4 {
     font-size: 18px;
-    padding-left: 20px;
+    margin-left: -70px;
   }
   .num {
     margin-left: 0;
@@ -772,12 +863,18 @@ aside {
   }
   .carte {
     width: 90%;
+    margin-left: 40px;
+    padding: 0;
   }
   aside {
     margin-left: 65%;
   }
+  .description i {
+    margin-left: 90px;
+  }
 }
 
+/*..................DESKTOP................................*/
 @media screen and (min-width: 1294px) {
   .ville {
     width: 100%;
@@ -797,6 +894,9 @@ aside {
   .num {
     width: 50px;
   }
+  .choix i {
+    margin-right: 50px;
+  }
   .choix button {
     width: 80%;
     margin: 0%;
@@ -807,8 +907,9 @@ aside {
   }
   #restaurants {
     margin: 0%;
-    padding-top: 50px;
-    height: 800px;
+    padding: 0%;
+    height: 1000px;
+    padding-bottom: 50px;
   }
   .restaurant_carte {
     display: -webkit-box;
@@ -820,17 +921,26 @@ aside {
             flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    height: 600px;
+    height: 800px;
     -ms-flex-pack: distribute;
         justify-content: space-around;
     width: 90%;
-    margin-left: 100px;
-    margin-top: 40px;
+    margin-left: 80px;
+    margin-top: 30px;
   }
   .carte {
     width: 45%;
-    margin: 0%;
+    height: 380px;
+    margin-bottom: 0px;
     padding: 0;
+  }
+  .photo img {
+    height: 300px;
+  }
+  .description i {
+    padding: 0;
+    margin: 0;
+    margin-left: 90%;
   }
   aside {
     margin-left: 30.5%;
