--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -39,10 +39,15 @@ main
     font-size: 25px;
     margin-left: 20px;
 }
-.titre i
+.coeur i
 {
     font-size: 25px;
     margin-right: 40px;
+}
+.coeur:hover i
+{
+    display: flex;
+    background-color: $degrade;
 }
 .detailmenu
 {
@@ -112,39 +117,33 @@ h4
     font-weight: 800;
     color: black;
     margin-right: 10px;
-}
-.valide
-{
-    display: flex;
-    justify-content: center;
-    width: 0px;
-    
+    text-overflow: ellipsis;
 }
 .valide i
 {
     display: flex;
-    color: transparent;
-    border: red solid;
+    color:transparent;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    padding: 10px;
+    width: 50px;
+    height: 60px;
+    margin-top: -31px;
+    border-radius: 0 20px 20px 0;
+    transform: scale(1);
    
 
 }
 .valide:hover i
 {
     color: white;
-    align-items: center;
     background-color: $tertiaire;
-    font-size: 20px;
-    padding: 10px;
-    width: 42px;
-    height: 60px;
-    margin-bottom: -100px;
-    margin-right: 40px;
-    border-radius: 0 20px 20px 0;
-    border:$tertiaire;
+    transition: scaleX(1.05);
 }
 .menu:hover
 {
-    box-shadow: green 6px 6px 6px;
+    box-shadow: grey 6px 6px 6px;
 }
 .bouton
 {
