--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -191,9 +191,16 @@ main {
   margin-left: 20px;
 }
 
-.titre i {
+.coeur i {
   font-size: 25px;
   margin-right: 40px;
+}
+
+.coeur:hover i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: linear-gradient(to bottom right, #FF79DA, #9356DC);
 }
 
 .detailmenu {
@@ -291,16 +298,7 @@ h4 {
   font-weight: 800;
   color: black;
   margin-right: 10px;
-}
-
-.valide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 0px;
+  text-overflow: ellipsis;
 }
 
 .valide i {
@@ -308,28 +306,32 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  border: red solid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 50px;
+  height: 60px;
+  margin-top: -31px;
+  border-radius: 0 20px 20px 0;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .valide:hover i {
   color: white;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   background-color: #99E2D0;
-  font-size: 20px;
-  padding: 10px;
-  width: 42px;
-  height: 60px;
-  margin-bottom: -100px;
-  margin-right: 40px;
-  border-radius: 0 20px 20px 0;
-  border: #99E2D0;
+  -webkit-transition: scaleX(1.05);
+  transition: scaleX(1.05);
 }
 
 .menu:hover {
-  -webkit-box-shadow: green 6px 6px 6px;
-          box-shadow: green 6px 6px 6px;
+  -webkit-box-shadow: grey 6px 6px 6px;
+          box-shadow: grey 6px 6px 6px;
 }
 
 .bouton {
